--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/AdoniroSalles/api-book/issues"
   },
-  "homepage": "https://github.com/AdoniroSalles/api-book#readme"
+  "homepage": "https://github.com/AdoniroSalles/api-book#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+  }
 }
