--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "api para poder consumir a api do google books e trabalhar com os dados",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/AdoniroSalles/api-book#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1"
   },
